[package]
name = "yeslogic-unicode-script"
version = "0.4.0"
authors = [
  "The Servo Project Developers",
  "YesLogic Pty. Ltd. <info@yeslogic.com>"
]

homepage = "https://github.com/yeslogic/unicode-script"
repository = "https://github.com/yeslogic/unicode-script"
documentation = "https://docs.rs/crate/yeslogic-unicode-script"

readme = "README.md"
license = "MIT / Apache-2.0"

description = "Fast lookup of the Unicode Script property"
keywords = ["unicode", "text", "i18n", "script"]
categories = ["text-processing"]

[lib]
name = "unicode_script"

[features]
harfbuzz = ["harfbuzz-sys"]

[dependencies.harfbuzz-sys]
version = "0.5"
optional = true
